--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 .hidden {
     display: none;
 }
+#BackGroundImage {
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    top: 0;
+    bottom: 0;
+}
