--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,19 @@
 .hidden {
     display: none;
 }
-#BackGroundImage {
+body {
+    animation: fadein 0.8s ease-in-out forwards;
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.BackGroundImage {
+    width: 100%;
+    height: 100%;
     position: absolute;
-    width: inherit;
-    height: inherit;
-    top: 0;
-    bottom: 0;
+    z-index: -1;
+    opacity: 0.8;
+    background-position: center;
+    background-size: cover;
 }
