--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
     flex-direction: column;
     align-items: center;
 }
+#login-form {
+    width: 400px;
+}
 .BackGroundImage {
     width: 100%;
     height: 100%;
@@ -16,4 +19,11 @@ body {
     opacity: 0.8;
     background-position: center;
     background-size: cover;
+}
+.index-form {
+    background: none;
+    border: 0;
+    font-size: 22px;
+    color: white;
+    border-bottom: 2px solid white;
 }
