--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body {
     background: none;
     border: 0;
     font-size: 22px;
-    color: white;
+    color: rgb(69, 52, 52);
     border-bottom: 2px solid white;
     
 }
@@ -33,12 +33,13 @@ body {
     border-right: 0px;
     border-bottom: 2px solid white;
     font-size: 22px;
+    color: rgb(69, 52, 52);
 }
 .center {
     display: flex;
     align-items: center;
     flex-direction: column;
-    padding-top: 150px;
+    padding-top: 50px;
 }
 #clock {
     margin-top: 0px;
@@ -62,4 +63,15 @@ body {
     top: 30px;
     right: 20px;
     text-shadow: -1px 0px lime, 0px 1px lime, 1px 0px lime, 0px -1px lime;
+}
+#todo-list {
+    position: relative;
+    left: -100px;
+    color: coral;
+}
+#delete-button {
+    background: none;
+    position: absolute;
+    left: 200px;
+
 }
